# universal-visual-os-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.in  requirements.txt
docs/: CONTEXT_BOUNDARIES.json  CONTEXT_BOUNDARIES.md  CONTEXT_PACKS.json  CONTEXT_PACKS.md  NEXT_STEPS.md  PRODUCTION_PRUNE_PLAN.json  PRODUCTION_PRUNE_PLAN.md  PROJECT_STATUS.md  README.md  REPO_INVENTORY.json  REPO_INVENTORY.md  SYMBOL_MAP.json  SYMBOL_MAP.md  VALIDATION_REPORT_TEMPLATE.md  execplan.md  spec.md
prompts/: 00_senaryo.md  01_plan_prompt.md  02_skeleton_prompt.md  03_vision_prompt.md  04_memory_recovery_prompt.md  05_policy_safety_prompt.md  06_main_loop_prompt.md  07_validation_prompt.md  08_consolidasyon  09_windows_screen_metrics_provider.md  10_observe_only_capture_adapter.md  11_semantic_extraction_adapter.md  12_semantic_state_building.md  13_semantic_extraction_enrichment.md  14_OCR_text_extraction_adapter.md  15_ocr_altyapı.md  16_layout_region_analysis.md  17_candidate_detection.md  18_verification_outcome_evaluation.md  19_safe_action_mode.md  20_end_to_end_scenario_engine.md
tests/: conftest.py  test_action_intent_scaffolding.py  test_action_tool_boundary.py  test_ai_architecture_scaffolding.py  test_ai_boundary_contracts.py  test_candidate_ontology.py  test_cloud_planner_client.py  test_cloud_planner_scaffolding.py  test_config_models.py  test_deterministic_escalation_engine.py  test_dry_run_action_engine.py  test_geometry_transforms.py  test_goal_oriented_verification.py  test_import_boundaries.py  test_local_visual_resolver_backend.py  (+39 more)
(+127 files in other folders)
